worked on html and css

--- a/index.html
+++ b/index.html
@@ -6,11 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script defer src="script.js"></script>
-    <title>My RomanNumeralConverter</title>
+    <title>My RomanNumeral Converter</title>
   </head>
 
   <body>
-
+    <div class="converter-container">
+      <label for="number">Enter a number:</label>
+      <input type="number" id="number">
+      <button id="convert-btn" onclick="convertToRoman()">Convert</button>
+      <div id="output"></div>
+    </div>
   </body>
 
 </html>
